fixed issue with mobile query where image was creating a scrollbar, and answered the questions and completed the javascript tasks

--- a/css/index.css
+++ b/css/index.css
@@ -158,15 +158,15 @@ body {
   background-image: url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
   background-repeat: no-repeat;
   background-position: center;
-  height: 390px;
-  width: 650px;
+  height: 350px;
+  width: 550px;
   margin: 0 auto;
   align-items: center;
   margin-bottom: 4%;
 }
 @media (max-width: 500px) {
   .main-container .title-container {
-    width: 500px;
+    width: 100%;
   }
 }
 .main-container .title-container h1 {
