--- a/less/main.less
+++ b/less/main.less
@@ -24,6 +24,7 @@ body {
     @media @mobile {
        width: 100%;
        
+       
     }//this closes media query for .main container
     
 
@@ -33,15 +34,16 @@ body {
     background-image: url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
     background-repeat: no-repeat;
     background-position: center;
-    height: 390px;
-    width: 650px;
+    height: 350px;
+    width: 550px;
     margin: 0 auto;
     align-items: center;
     margin-bottom: 4%;
 
     @media @mobile {
+        width: 100%;
         
-        width: 500px;
+        
     
     }//this closes media query for .title-container
      
